[package]
name = "redis-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
deadpool-redis = "0.12.0"
deadpool = "0.9.5"
log = "0.4.18"
env_logger = "0.10.0"
futures= "0.3"
"redis" = { version = "0.23", features = ["aio", "tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
"tokio" = { version = "1.14.1", features = ["macros", "rt-multi-thread", "time"] }